; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/ip2/extr_ip2main.c_ip2_tiocmset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/ip2/extr_ip2main.c_ip2_tiocmset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }
%struct.tty_struct = type { i64 }
%struct.file = type { i32 }

@DevTable = common dso_local global %struct.TYPE_4__** null, align 8
@ENODEV = common dso_local global i32 0, align 4
@TIOCM_RTS = common dso_local global i32 0, align 4
@PTYPE_INLINE = common dso_local global i32 0, align 4
@CMD_RTSUP = common dso_local global i32 0, align 4
@I2_RTS = common dso_local global i32 0, align 4
@TIOCM_DTR = common dso_local global i32 0, align 4
@CMD_DTRUP = common dso_local global i32 0, align 4
@I2_DTR = common dso_local global i32 0, align 4
@CMD_RTSDN = common dso_local global i32 0, align 4
@CMD_DTRDN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tty_struct*, %struct.file*, i32, i32)* @ip2_tiocmset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ip2_tiocmset(%struct.tty_struct* %0, %struct.file* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.tty_struct*, align 8
  %7 = alloca %struct.file*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_4__*, align 8
  store %struct.tty_struct* %0, %struct.tty_struct** %6, align 8
  store %struct.file* %1, %struct.file** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %11 = load %struct.TYPE_4__**, %struct.TYPE_4__*** @DevTable, align 8
  %12 = load %struct.tty_struct*, %struct.tty_struct** %6, align 8
  %13 = getelementptr inbounds %struct.tty_struct, %struct.tty_struct* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__*, %struct.TYPE_4__** %11, i64 %14
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  store %struct.TYPE_4__* %16, %struct.TYPE_4__** %10, align 8
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %18 = icmp eq %struct.TYPE_4__* %17, null
  br i1 %18, label %19, label %22

19:                                               ; preds = %4
  %20 = load i32, i32* @ENODEV, align 4
  %21 = sub nsw i32 0, %20
  store i32 %21, i32* %5, align 4
  br label %89

22:                                               ; preds = %4
  %23 = load i32, i32* %8, align 4
  %24 = load i32, i32* @TIOCM_RTS, align 4
  %25 = and i32 %23, %24
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %37

27:                                               ; preds = %22
  %28 = load i32, i32* @PTYPE_INLINE, align 4
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %30 = load i32, i32* @CMD_RTSUP, align 4
  %31 = call i32 @i2QueueCommands(i32 %28, %struct.TYPE_4__* %29, i32 100, i32 1, i32 %30)
  %32 = load i32, i32* @I2_RTS, align 4
  %33 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %34 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 4
  %36 = or i32 %35, %32
  store i32 %36, i32* %34, align 4
  br label %37

37:                                               ; preds = %27, %22
  %38 = load i32, i32* %8, align 4
  %39 = load i32, i32* @TIOCM_DTR, align 4
  %40 = and i32 %38, %39
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %42, label %52

42:                                               ; preds = %37
  %43 = load i32, i32* @PTYPE_INLINE, align 4
  %44 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %45 = load i32, i32* @CMD_DTRUP, align 4
  %46 = call i32 @i2QueueCommands(i32 %43, %struct.TYPE_4__* %44, i32 100, i32 1, i32 %45)
  %47 = load i32, i32* @I2_DTR, align 4
  %48 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %49 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %48, i32 0, i32 1
  %50 = load i32, i32* %49, align 4
  %51 = or i32 %50, %47
  store i32 %51, i32* %49, align 4
  br label %52

52:                                               ; preds = %42, %37
  %53 = load i32, i32* %9, align 4
  %54 = load i32, i32* @TIOCM_RTS, align 4
  %55 = and i32 %53, %54
  %56 = icmp ne i32 %55, 0
  br i1 %56, label %57, label %68

57:                                               ; preds = %52
  %58 = load i32, i32* @PTYPE_INLINE, align 4
  %59 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %60 = load i32, i32* @CMD_RTSDN, align 4
  %61 = call i32 @i2QueueCommands(i32 %58, %struct.TYPE_4__* %59, i32 100, i32 1, i32 %60)
  %62 = load i32, i32* @I2_RTS, align 4
  %63 = xor i32 %62, -1
  %64 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %65 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %64, i32 0, i32 1
  %66 = load i32, i32* %65, align 4
  %67 = and i32 %66, %63
  store i32 %67, i32* %65, align 4
  br label %68

68:                                               ; preds = %57, %52
  %69 = load i32, i32* %9, align 4
  %70 = load i32, i32* @TIOCM_DTR, align 4
  %71 = and i32 %69, %70
  %72 = icmp ne i32 %71, 0
  br i1 %72, label %73, label %84

73:                                               ; preds = %68
  %74 = load i32, i32* @PTYPE_INLINE, align 4
  %75 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %76 = load i32, i32* @CMD_DTRDN, align 4
  %77 = call i32 @i2QueueCommands(i32 %74, %struct.TYPE_4__* %75, i32 100, i32 1, i32 %76)
  %78 = load i32, i32* @I2_DTR, align 4
  %79 = xor i32 %78, -1
  %80 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %81 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %80, i32 0, i32 1
  %82 = load i32, i32* %81, align 4
  %83 = and i32 %82, %79
  store i32 %83, i32* %81, align 4
  br label %84

84:                                               ; preds = %73, %68
  %85 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %86 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %85, i32 0, i32 0
  %87 = load i32, i32* %86, align 4
  %88 = call i32 @serviceOutgoingFifo(i32 %87)
  store i32 0, i32* %5, align 4
  br label %89

89:                                               ; preds = %84, %19
  %90 = load i32, i32* %5, align 4
  ret i32 %90
}

declare dso_local i32 @i2QueueCommands(i32, %struct.TYPE_4__*, i32, i32, i32) #1

declare dso_local i32 @serviceOutgoingFifo(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
